# listenarr

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  listenarr-init.sh  pyproject.toml
.github/workflows/: block-direct-pr-to-main.yml  build-publish-image.yml
src/: Lidify.py  Listenarr.py
src/static/: script.js  style.css
src/templates/: base.html
