[project]
name = "listenarr"
version = "0.1.0"
description = "Listenarr is a fork of Lidify that uses ListenBrainz's similar-artists lab API to look up songs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "gevent>=25.9.1",
    "gevent-websocket>=0.10.1",
    "gunicorn>=23.0.0",
    "musicbrainzngs>=0.7.1",
    "pylast>=6.0.0",
    "requests>=2.32.5",
    "spotipy>=2.25.1",
    "thefuzz>=0.22.1",
    "unidecode>=1.4.0",
]
